--- a/.gitignore
+++ b/.gitignore
@@ -151,8 +151,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
-
-
+/sensitivity_results
+/timeseriesanalysis
 /plots
 parameter_results_1.json
 correlation_matrix_1.json
