--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -1,5 +1,6 @@
-matplotlib==3.7.1
-numpy==1.25.1
-pandas==2.0.3
-SALib==1.4.7
-seaborn==0.13.0
+matplotlib==3.8.4
+numpy==1.26.4
+pandas==2.2.2
+SALib==1.4.8
+scikit_learn==1.4.1
+seaborn==0.13.2
